<resources>
    <string name="app_name">Hwaa</string>
    <string name="not_connected_internet">Internet is not connected</string>
    <string name="fab">dictionary fab\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_image">start_image</string>
    <string name="lesson_image">lesson image\n</string>
    <string name="bookmark">bookmark image\n</string>
    <string name="avatar">image for avatar\n</string>
    <string name="streak">image of streak\n</string>
    <string name="notification">image of notification\n</string>
    <string name="rate">image of rate\n</string>
    <string name="pronunciation">image for pronunciation\n</string>
    <string name="stroke_order">image for stroke order</string>
    <string name="back">BACK</string>
    <string name="more">ic_more\n</string>
    <string name="iv_content">content of question</string>
    <string name="comment">comment</string>
    <string name="like">like</string>
    <string name="forum">HWAA</string>
    <string name="what_s_on_your_mind">what\'s on your mind?</string>
    <string name="post">POST</string>
    <string name="quick_revise">quick_review_button</string>
    <string name="number_of_cards">NUMBER OF CARDS</string>
    <string name="start">start</string>
    <string name="email_empty">Email is empty</string>
    <string name="password_empty">Password is empty</string>
    <string name="password_not_match">Password not match</string>
    <string name="confirm_password_empty">Confirm password is empty</string>
    <string name="ok">ok</string>
    <string name="error">error</string>
    <string name="hint_comment">hint</string>
</resources>