<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tbBookFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                android:layout_marginStart="10dp"
                android:background="@color/primary_color"
                android:contentDescription="@string/avatar"
                app:layout_constraintBottom_toTopOf="@+id/progressIndicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/Circular" />


            <ImageView
                android:id="@+id/iv_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/notification"
                app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_avatar"
                app:srcCompat="@drawable/ic_notification_day"
                app:tint="@color/black" />


            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="4.5/5"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
                app:layout_constraintEnd_toStartOf="@id/iv_notification"
                app:layout_constraintTop_toTopOf="@+id/iv_avatar" />

            <ImageView
                android:id="@+id/iv_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/rate"
                app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
                app:layout_constraintEnd_toStartOf="@id/tv_rate"
                app:layout_constraintTop_toTopOf="@+id/iv_avatar"
                app:srcCompat="@drawable/ic_rate_day"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tv_streak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="5"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
                app:layout_constraintEnd_toStartOf="@id/iv_rate"
                app:layout_constraintTop_toTopOf="@+id/iv_avatar" />

            <ImageView
                android:id="@+id/iv_streak"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/streak"
                app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
                app:layout_constraintEnd_toStartOf="@id/tv_streak"
                app:layout_constraintTop_toTopOf="@+id/iv_avatar"
                app:srcCompat="@drawable/ic_streak_day"
                app:tint="@color/black" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressIndicator"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:progress="50"
                android:progressTint="@color/f2f2f2"
                android:trackTint="@color/primary_color"
                app:indicatorColor="@color/primary_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_avatar"
                app:trackColor="@color/f2f2f2"
                app:trackCornerRadius="6dp"
                app:trackThickness="12dp" />

            <TextView
                android:id="@+id/v_progress_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_progress_point"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="50%"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/progressIndicator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/progressIndicator" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clLesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingHorizontal="24dp">

            <ImageButton
                android:id="@+id/ibBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ibMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/more"
                android:src="@drawable/ic_more"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            
            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/lpiLesson"
                android:layout_width="0dp"
                android:layout_height="12dp"
                app:layout_constraintStart_toEndOf="@+id/ibBack"
                app:layout_constraintEnd_toStartOf="@+id/ibMore"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:progress="50"
                android:progressTint="@color/f2f2f2"
                android:trackTint="@color/primary_color"
                app:indicatorColor="@color/primary_color"
                app:trackColor="@color/f2f2f2"
                app:trackCornerRadius="6dp"
                android:layout_marginHorizontal="16dp"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="32dp"
                android:background="@color/f2f2f2"
                app:layout_constraintTop_toTopOf="@+id/lpiLesson"
                app:layout_constraintBottom_toBottomOf="parent"/>
                

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

</layout>