<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Toolbar
        android:id="@+id/tbBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentInsetStart="0dp"
        android:contentInsetEnd="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                android:layout_marginStart="10dp"
                android:background="@color/white"
                android:contentDescription="@string/avatar"
                app:layout_constraintBottom_toTopOf="@+id/progressIndicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/Circular" />


            <ImageView
                android:id="@+id/iv_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/notification"
                app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_avatar"
                app:srcCompat="@drawable/ic_notification_day"
                app:tint="#40DF9F" />


            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="4.5/5"
                android:textColor="@color/tb_book_item_color"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
                app:layout_constraintEnd_toStartOf="@id/iv_notification"
                app:layout_constraintTop_toTopOf="@+id/iv_avatar" />

            <ImageView
                android:id="@+id/iv_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/rate"
                app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
                app:layout_constraintEnd_toStartOf="@id/tv_rate"
                app:layout_constraintTop_toTopOf="@+id/iv_avatar"
                app:srcCompat="@drawable/ic_rate_day"
                app:tint="@color/tb_book_item_color" />

            <TextView
                android:id="@+id/tv_streak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="5"
                android:textColor="@color/tb_book_item_color"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
                app:layout_constraintEnd_toStartOf="@id/iv_rate"
                app:layout_constraintTop_toTopOf="@+id/iv_avatar" />

            <ImageView
                android:id="@+id/iv_streak"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/streak"
                app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
                app:layout_constraintEnd_toStartOf="@id/tv_streak"
                app:layout_constraintTop_toTopOf="@+id/iv_avatar"
                app:srcCompat="@drawable/ic_streak_day"
                app:tint="@color/tb_book_item_color" />

            <!--            <com.google.android.material.progressindicator.LinearProgressIndicator-->
            <!--                android:id="@+id/progressIndicator"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="12dp"-->
            <!--                android:layout_marginStart="10dp"-->
            <!--                android:layout_marginTop="10dp"-->
            <!--                android:layout_marginEnd="10dp"-->
            <!--                android:layout_marginBottom="10dp"-->
            <!--                android:progress="50"-->
            <!--                android:progressTint="@color/f2f2f2"-->
            <!--                android:trackTint="@color/primary_color"-->
            <!--                app:indicatorColor="@color/primary_color"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/iv_avatar"-->
            <!--                app:trackColor="@color/f2f2f2"-->
            <!--                app:trackCornerRadius="6dp"-->
            <!--                app:trackThickness="12dp" />-->

            <!--            <TextView-->
            <!--                android:id="@+id/v_progress_point"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:background="@drawable/bg_progress_point"-->
            <!--                android:paddingHorizontal="8dp"-->
            <!--                android:paddingVertical="4dp"-->
            <!--                android:text="50%"-->
            <!--                android:textColor="@color/white"-->
            <!--                android:textSize="12sp"-->
            <!--                app:layout_constraintBottom_toBottomOf="@+id/progressIndicator"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintHorizontal_bias="0.5"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="@+id/progressIndicator" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </Toolbar>

</layout>